--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@200;300;400;500;600;700;800;900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.primary-button{
-    @apply btn bg-orange-color hover:bg-orange-500 border-none rounded-none;
+.primary-button {
+  @apply btn bg-orange-color hover:bg-orange-500 border-none rounded-none;
 }
-::-webkit-scrollbar{
-    width: 0;
+.search-form-field {
+  @apply h-full px-4 py-2 text-gray-700 bg-white border border-gray-200 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-400 focus:ring-blue-300 focus:ring-opacity-40 dark:focus:border-blue-300 focus:outline-none focus:ring;
+}
+
+::-webkit-scrollbar {
+  width: 0;
 }
