--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@
   @apply h-full px-4 py-2 text-gray-700 bg-white border border-gray-200 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-400 focus:ring-blue-300 focus:ring-opacity-40 dark:focus:border-blue-300 focus:outline-none focus:ring;
 }
 
+.react-tabs__tab--selected{
+  @apply btn !bg-warning focus:rounded-lg focus:border-none border-none !rounded-lg
+}
+
 ::-webkit-scrollbar {
   width: 0;
 }
